--- a/Social-Souls/backend/package.json
+++ b/Social-Souls/backend/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "axios": "^1.7.5",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
