--- a/Social-Souls/backend/.env
+++ b/Social-Souls/backend/.env
@@ -1,2 +1,3 @@
-MONGODB_URL="mongodb+srv:tobiasburman99:CnVfWxx4gX3EmBE9@tobiasburman.x8zbq.mongodb.net/?retryWrites=true&w=majority&appName=TobiasBurman";
-jsonWebToken_SECRET="asdffjjjjklll2355kkkddd";
+MONGODB_URL="mongodb+srv://tobiasburman99:CnVfWxx4gX3EmBE9@tobiasburman.x8zbq.mongodb.net/?retryWrites=true&w=majority&appName=TobiasBurman"
+jsonWebToken_SECRET="asdffjjjjklll2355kkkddd"
+APP_URL="http://127.0.0.1:5173"
