--- a/Social-Souls/package.json
+++ b/Social-Souls/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.3.30",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
